--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -5,10 +5,16 @@
     </div>
 
     <div class="card__details">
+      <div class="card__detail-box {%NOT_ORGANIC%}">
+        <h6 class="card__detail card__detail--organic">Organic!</h6>
+      </div>
+
       <div class="card__detail-box">
         <h6 class="card__detail">{%QUANTITY%} 🌽 per 📦</h6>
       </div>
 
+    
+      
       <div class="card__detail-box">
         <h6 class="card__detail card__detail--price">{%PRICE%}€</h6>
       </div>
