--- a/templates/product.html
+++ b/templates/product.html
@@ -271,7 +271,7 @@
 
       <figure class="product">
         <div class="product__organic {%NOT_ORGANIC%} "><h5>Organic</h5></div>
-        <a href="#" class="product__back">
+        <a href="/overview" class="product__back">
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="product__hero">
@@ -288,7 +288,7 @@
         <h2 class="product__name">{%PRODUCTNAME%}</h2>
         <div class="product__details">
           <p><span class="emoji-left">🌍</span>From {%FROM%}</p>
-          <p><span class="emoji-left">❤️</span>{%PRODUCTNUTRIENTNAME%}</p>
+          <p><span class="emoji-left">❤️</span>{%NUTRIENTS%}</p>
           <p><span class="emoji-left">📦</span> {%QUANTITY%}</p>
           <p><span class="emoji-left">🏷</span> {%PRICE%}</p>
         </div>
@@ -299,7 +299,7 @@
         </a>
   
         <p class="product__description">
-          {%DESCRIPT%}
+        {%DESCRIPTION%}
         </p>
       </figure>
       
